--- a/services/nomad/root/etc/nomad/server.conf
+++ b/services/nomad/root/etc/nomad/server.conf
@@ -6,8 +6,6 @@ advertise {
   rpc = "127.0.0.1:4647"
 }
 
-client {
-  options {
-    "driver.whitelist" = "docker"
-  }
+consul {
+  address = "consul:8500"
 }
