--- a/services/fabio/root/etc/fabio/fabio.properties
+++ b/services/fabio/root/etc/fabio/fabio.properties
@@ -166,7 +166,7 @@
 #
 # The default is
 #
-registry.consul.addr = consul:8500
+# registry.consul.addr = 127.0.0.1:8500
 
 
 # registry.consul.token configures the acl token for consul.
