Pass in `DOMAIN_NAME` as a prefix to use for host HTTP routing.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       SERVICE_80_CHECK_HTTP: /health
       SERVICE_80_CHECK_INTERVAL: 5s
       SERVICE_80_CHECK_TIMEOUT: 1s
-      SERVICE_80_TAGS: urlprefix-/
+      SERVICE_80_TAGS: urlprefix-${DOMAIN_NAME}/
     links:
       - nebula
 
@@ -38,7 +38,7 @@ services:
       SERVICE_80_CHECK_HTTP: /health
       SERVICE_80_CHECK_INTERVAL: 5s
       SERVICE_80_CHECK_TIMEOUT: 1s
-      SERVICE_80_TAGS: urlprefix-/git
+      SERVICE_80_TAGS: urlprefix-${DOMAIN_NAME}/git
     volumes_from:
       - project_data
     volumes:
