--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: always
     environment:
       registry_consul_addr: 172.20.10.10:8500
-      registry_consul_register_addr: ${HOSTNAME}:9998
+      registry_consul_register_addr: ${HOST_IP}:9998
       ui_addr: 0.0.0.0:9998
       SERVICE_IGNORE: 'true'
     ports:
@@ -103,6 +103,6 @@ services:
   registrator:
     image: gliderlabs/registrator:v7
     network_mode: host
-    command: -ip=${HOSTNAME} -resync=30 consul://172.20.10.10:8500
+    command: -ip=${HOST_IP} -resync=30 consul://172.20.10.10:8500
     volumes:
       - "/var/run/docker.sock:/tmp/docker.sock"
