--- a/ops/resources/Makefile
+++ b/ops/resources/Makefile
@@ -14,6 +14,7 @@ get:
 plan: get
 	terraform plan \
 		-var-file="images/base/image.json" \
+		-var-file="images/nat/image.json" \
 		-out=plan
 
 .DELETE_ON_ERROR:
@@ -24,3 +25,4 @@ apply: plan
 destroy:
 	terraform destroy \
 		-var-file="images/base/image.json" \
+		-var-file="images/nat/image.json" \
