--- a/ops/resources/consul/resources/user_data.bash.template
+++ b/ops/resources/consul/resources/user_data.bash.template
@@ -5,7 +5,7 @@ IFS=' '
 
 configure_consul() {
   echo "Configuring Consul options"
-  echo "CONSUL_OPTIONS=-server -dc=google -bootstrap-expect=1" | sudo tee /etc/systemd/system/consul.d/consul.env
+  echo "CONSUL_OPTIONS=-server -dc=google -bootstrap-expect=${consul_bootstrap_expect}" | sudo tee /etc/systemd/system/consul.d/consul.env
 }
 
 start_consul() {
