--- a/ops/resources/images/Makefile
+++ b/ops/resources/images/Makefile
@@ -7,14 +7,13 @@ NAT_FILES = $(shell find nat ! -name 'image.json' ! -name '.DS_Store')
 .PHONY: all clean
 
 define build-image
-rm log/packer.build.$(1).log || true
+rm log/packer.image.$(1).log || true
 packer build -var-file=variables.json $(2) $(1)/main.json | tee log/packer.image.$(1).log
-sleep 1
+endef
+
+define save-image-id
 $(eval $@_image_name := $(shell grep "A disk image was created:" log/packer.image.$(1).log | cut -d ' ' -f8))
-@echo "$($@_image_name)"
-@echo "{\"$(1)_image_name\":\"$($@_image_name)\"}" > $@
-@cat $@
-# TODO should also clean up the old image here...
+echo "{\"$(1)_image_name\":\"$($@_image_name)\"}" > $@
 endef
 
 all:
@@ -25,7 +24,9 @@ all:
 .DELETE_ON_ERROR:
 base/image.json: $(BASE_FILES)
 	$(call build-image,base)
+	$(call save-image-id,base)
 
 .DELETE_ON_ERROR:
 nat/image.json: base/image.json $(NAT_FILES)
 	$(call build-image,nat,-var-file=base/image.json)
+	$(call save-image-id,nat)
