Hacks for dasyyyzzz

--- a/ops/resources/images/Makefile
+++ b/ops/resources/images/Makefile
@@ -1,27 +1,32 @@
 SHELL = /bin/bash -o pipefail
 NUMPROCS:=$(shell sysctl -n hw.ncpu)
 BUILD_DIR = _build
-IMAGES = base
+IMAGES = base node client server
 
-.PHONY: all
+.PHONY: all $(IMAGES)
 
 define logfile_path
-$(BUILD_DIR)/$(1).packer.build.log
+$(BUILD_DIR)/log/$(1).packer.build.log
 endef
 
-define get_image_id
-grep "A disk image was created:" $(call logfile_path,$(1)) | cut -d ' ' -f8
-endef
-
-define IMAGE_template
-$(BUILD_DIR)/$(1).json:
-	@echo "Running IMAGE_template for $(1)"
+define BUILD_IMAGE_TEMPLATE
+$(BUILD_DIR)/$(1)_image.json: $(shell find $(1) ! -name '.DS_Store')
 	$(eval @$_logfile = $(call logfile_path,$(1)))
+	@mkdir -p $(BUILD_DIR)
+	@mkdir -p $(BUILD_DIR)/log
 	@rm $(@$_logfile) || true
-	packer build -var-file=variables.json $(2) $(1)/main.json | tee $(@$_logfile)
-	@echo "{\"$(1)_image_name\":\"$(eval $(call get_image_id,$(1)))\"}" > $$@
-	rm $$@
+	packer build \
+	  -var-file=variables.json \
+		$$(shell find $(BUILD_DIR) -type f -name "*_image.json" | sed 's/^/-var-file=/' | xargs) \
+		$(1)/main.json | tee $(@$_logfile)
+	@grep "A disk image was created:" $(call logfile_path,$(1)) | cut -d ' ' -f8 | sed 's/^/{\"$(1)_image_name\":\"/' | sed 's/$$$$/\"}/' > $$@
+	@cat $$@
 endef
 
-$(foreach image,$(IMAGES), $(eval $(call IMAGE_template,$(image))))
-all: $(foreach image,$(IMAGES), $(BUILD_DIR)/$(image).json)
+$(foreach image,$(IMAGES), $(eval $(call BUILD_IMAGE_TEMPLATE,$(image))))
+
+base: $(BUILD_DIR)/base_image.json
+node: base $(BUILD_DIR)/node_image.json
+# client: node $(BUILD_DIR)/client_image.json
+# server: node $(BUILD_DIR)/server_image.json
+all: $(IMAGES)
