--- a/ops/resources/images/node/files/root/etc/systemd/system/nomad.service
+++ b/ops/resources/images/node/files/root/etc/systemd/system/nomad.service
@@ -1,20 +1,19 @@
 [Unit]
-Description=consul agent
+Description=nomad agent
 Requires=network-online.target setup-network-environment.service
 After=network-online.target setup-network-environment.service
 
 [Service]
 EnvironmentFile=/etc/network-environment
-EnvironmentFile=-/etc/systemd/system/consul.d/consul.env
+EnvironmentFile=-/etc/systemd/system/nomad.d/nomad.env
 Environment=GOMAXPROCS=2
 Restart=on-failure
-ExecStart=/usr/local/bin/consul agent \
-  $CONSUL_OPTIONS \
+ExecStart=/usr/local/bin/nomad agent \
+  $NOMAD_OPTIONS \
+  -bind=${DEFAULT_IPV4} \
   -advertise=${DEFAULT_IPV4} \
-  -config-dir=/etc/systemd/system/consul.d \
-  -data-dir=/opt/consul/data \
-  -ui-dir=/opt/consul/ui \
-  -ui \
+  -config=/etc/systemd/system/nomad.d \
+  -data-dir=/opt/nomad/data \
   -syslog
 ExecReload=/bin/kill -HUP $MAINPID
 KillSignal=SIGINT
