--- a/ops/resources/images/node/files/root/etc/systemd/system/consul.service
+++ b/ops/resources/images/node/files/root/etc/systemd/system/consul.service
@@ -10,12 +10,13 @@ Environment=GOMAXPROCS=2
 Restart=on-failure
 ExecStart=/usr/local/bin/consul agent \
   $CONSUL_OPTIONS \
+  -bind=${DEFAULT_IPV4} \
+  -client=${DEFAULT_IPV4} \
   -advertise=${DEFAULT_IPV4} \
   -config-dir=/etc/systemd/system/consul.d \
   -data-dir=/opt/consul/data \
   -ui-dir=/opt/consul/ui \
-  -ui \
-  -syslog
+  -ui
 ExecReload=/bin/kill -HUP $MAINPID
 KillSignal=SIGINT
 
