--- a/ops/resources/node-cluster/resources/user_data.bash.template
+++ b/ops/resources/node-cluster/resources/user_data.bash.template
@@ -3,25 +3,31 @@
 set -euo pipefail
 IFS=' '
 
+start_consul_agent() {
+  echo "Starting Consul service"
+  sudo systemctl start consul.service
+}
+
+join_consul_cluster() {
+  echo "Joining Consul cluster"
+  consul-join
+}
+
 configure_nomad() {
   echo "Configuring Nomad options"
   echo "NOMAD_OPTIONS=-client" | sudo tee /etc/systemd/system/nomad.d/nomad.env
 }
 
-start_nomad() {
+start_nomad_agent() {
   echo "Starting Nomad service"
   sudo systemctl start nomad.service
 }
 
-join_cluster() {
-  echo "Joining Nomad server peers"
-  nomad-join
-}
-
 main() {
+  start_consul_agent
+  join_consul_cluster
   configure_nomad
-  start_nomad
-  join_cluster
+  start_nomad_agent
 }
 
 main
