--- a/ops/resources/nomad-server-cluster/resources/nomad-server-startup-script.bash.template
+++ b/ops/resources/nomad-server-cluster/resources/nomad-server-startup-script.bash.template
@@ -24,6 +24,7 @@ EOF
 
 start_nomad() {
   echo "Starting Nomad service"
+  sudo systemctl enable nomad.service
   sudo systemctl start nomad.service
 }
 
