--- a/services/nebula/script/build
+++ b/services/nebula/script/build
@@ -6,11 +6,10 @@ set -euo pipefail
 IFS=$'\n\t'
 
 main() {
-  docker build \
-    --build-arg NOMAD_VERSION=${NOMAD_VERSION} \
-    --build-arg MIX_ENV={$MIX_ENV} \
-    --tag "nabula_app_${RELEASE_BUILD_TAG}:latest" \
-    .
+  local tag;
+  tag="$1"
+
+  docker build --build-arg NOMAD_VERSION=${NOMAD_VERSION} --build-arg MIX_ENV={$MIX_ENV} --tag "${tag}" .
 }
 
-main
+main "$1"
