--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,5 +1,5 @@
 env:
-  REGISTRY_PATH: "docker.ferocia.com.au/"
+  REGISTRY_PATH: "docker.ferocia.com.au"
   RAILS_ENV: test
   RACK_ENV: test
   NODE_ENV: test
