--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -8,16 +8,9 @@ steps:
 
   - wait
 
-  # - name: ":docker:"
-  #   command: ".buildkite/steps/docker.bash"
-  #   timeout_in_minutes: 10
-  #   agents:
-  #     docker: true
-  #     capacity: low
-
-  - name: ":package:"
+  - name: ":package: Package Release"
     command: ".buildkite/steps/release.bash"
-    timeout_in_minutes: 10
+    timeout_in_minutes: 5
     env:
       MIX_ENV: prod
       NOMAD_VERSION: 0.4.0
