--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -5,23 +5,23 @@ env:
 
 steps:
 
-  - wait
+  # - wait
 
-  - name: ":package: Package"
-    command: ".buildkite/steps/release.bash"
-    timeout_in_minutes: 10
-    env:
-      MIX_ENV: prod
-      NOMAD_VERSION: 0.4.0
-    agents:
-      docker: true
-      capacity: low
+  # - name: ":package: Package"
+  #   command: ".buildkite/steps/release.bash"
+  #   timeout_in_minutes: 10
+  #   env:
+  #     MIX_ENV: prod
+  #     NOMAD_VERSION: 0.4.0
+  #   agents:
+  #     docker: true
+  #     capacity: low
 
-  - wait
+  # - wait
 
-  # - block: ":rocket:"
+  - block: ":rocket:"
 
-  - name: ":rocket: Deploy"
+  - name: ":googlecloud: Deploy"
     command: ".buildkite/steps/deploy.bash"
     timeout_in_minutes: 10
     agents:
