Lots of cleanup, working end to end provisioning.

--- a/ops/resources/images/node/files/root/etc/systemd/system/consul.service
+++ b/ops/resources/images/node/files/root/etc/systemd/system/consul.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=consul agent
+Description=Consul Agent
 Requires=network-online.target setup-network-environment.service
 After=network-online.target setup-network-environment.service
 
