--- a/ops/resources/images/node/files/root/etc/systemd/system/nomad.service
+++ b/ops/resources/images/node/files/root/etc/systemd/system/nomad.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=nomad agent
+Description=Nomad Agent
 Requires=network-online.target setup-network-environment.service
 After=network-online.target setup-network-environment.service
 
