--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -7,17 +7,17 @@ steps:
 
   - block: ":rocket:"
 
-  # - name: ":package: Package"
-  #   command: ".buildkite/steps/release.bash"
-  #   timeout_in_minutes: 10
-  #   env:
-  #     MIX_ENV: prod
-  #     NOMAD_VERSION: 0.4.0
-  #   agents:
-  #     docker: true
-  #     capacity: low
+  - name: ":package: Package"
+    command: ".buildkite/steps/release.bash"
+    timeout_in_minutes: 10
+    env:
+      MIX_ENV: prod
+      NOMAD_VERSION: 0.4.0
+    agents:
+      docker: true
+      capacity: low
 
-  # - wait
+  - wait
 
   - name: ":googlecloud: Deploy"
     command: ".buildkite/steps/deploy.bash"
